# you-get-web-ui

./: Cargo.toml  Dockerfile  README.MD
config/: log4rs.yaml
downloads/: metadata.json
src/: main.rs
static/: index.html
