[package]
name = "you-get-web-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-files = "0.6.6"
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
futures = "0.3.31"
uuid = { version = "1.11.0", features = ["v4"] }
thiserror = "1.0.66"
# env_logger = "0.11.5"
log = "0.4.22"
log4rs = "1.3.0"
